[package]
name = "common"
version = "0.1.0"
authors = ["Kawakami Shuta <rivertop.osamuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
console = "0.15.0"
serde = "1.0"
toml = "0.5.8"
tokio = { version = "1.3.0", features = ["full"] }