[package]
name = "data_transferer"
version = "0.1.0"
authors = ["Kawakami Shuta <rivertop.osamuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.14"
chrono = "0.4.19"
mongodb = "2.1.0"
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.13"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
csv = "1.1.6"
indicatif = "0.16.2"
num_cpus = "1.0"

# My crates
common = { path = "../common" }
database = { path = "../database" }