[package]
name = "database"
version = "0.1.0"
authors = ["Kawakami Shuta <rivertop.osamuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
mongodb = "2.1.0"
rayon = "1.5.0"
tokio = { version = "1.3.0", features = ["full"] }
async-trait = "0.1.51"
futures = "0.3.13"
chrono = "0.4.19"

# My crates
common = { path = "../common" }
liquid = { path = "../liquid" }
