[package]
name = "ipc"
version = "0.1.0"
authors = ["Kawakami Shuta <rivertop.osamuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# async runtime
tokio = { version = "1.3.0", features = ["full"] }

# My crates
common = { path = "../common" }