[package]
name = "liquid"
version = "0.1.0"
authors = ["Kawakami Shuta <rivertop.osamuta@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8", features = ["serde", "v4"] }
rand = "0.8.4"
once_cell = "1.8.0"
log = "0.4"

# json
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# https client
reqwest = { version = "0.11", features = ["blocking", "json"] }

# async runtime
tokio = { version = "1.2", features = ["full"] }
futures = "0.3.13"

# async web socket
tokio-tungstenite = { version = "0.17.0", features = ["native-tls"]}

# sync web socket
tungstenite = "0.17.0"

#signning payload
jsonwebtoken = "8.0.1"

# handling url
url = "2.2"

# tls
native-tls = "0.2"

# time
chrono = { version = "0.4", features = ["serde"] }

# My crates
common = { path = "../common"}
