[package]
name = "stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
mongodb = "2.1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
ndarray = {version = "0.15.3", features = ["blas"]}
ndarray-linalg = { version = "0.14.1", features = ["openblas-system"] }
tokio = { version = "1.3.0", features = ["full"] }
futures = "0.3.13"
rustfft = "6.0.1"
plotters = "0.3.1"
itertools = "0.10.3"
rayon = "1.5.1"

# My crates
common = { path = "../common" }
database = { path = "../database" }